<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/ivory"
    tools:context="com.chivsoft.livelondonbusmap.RouteSelection">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_initialise"
        android:textStyle="bold"
        android:id="@+id/selectRouteTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView android:text="@string/choose_routes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:id="@+id/selectRouteSubTitle"
        android:layout_below="@+id/selectRouteTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/routeListView"
        android:layout_below="@+id/selectRouteSubTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/useSelectedButton"
        android:background="@color/white"
        android:choiceMode="multipleChoice"
        android:clickable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showSelectedButton"
        android:id="@+id/useSelectedButton"
        android:layout_above="@+id/or"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:id="@+id/or"
        android:layout_above="@+id/useCurrentLocationButton"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showCurrentLocationButton"
        android:id="@+id/useCurrentLocationButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
